--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
-discord.py
-asyncpg
-aiohttp
-bloonspy
-pillow>=10.2.0
-aiofiles
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.2
+aiohttp==3.10.6
+aiosignal==1.3.1
+async-timeout==4.0.3
+asyncpg==0.29.0
+attrs==24.2.0
+bloonspy==0.8.1
+certifi==2024.8.30
+charset-normalizer==3.3.2
+discord.py==2.4.0
+frozenlist==1.4.1
+idna==3.10
+multidict==6.1.0
+pillow==10.4.0
+requests==2.32.3
+typing_extensions==4.12.2
+urllib3==2.2.3
+yarl==1.13.0
